20th June commit

--- a/gestureGames/templates/Home.html
+++ b/gestureGames/templates/Home.html
@@ -49,21 +49,21 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-3-base" href="Home.html" style="padding: 10px 20px;">Home</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-3-base" href="" style="padding: 10px 20px;">.</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html"></a>
 </li></ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <a href="" class="u-border-none u-btn u-button-style u-hover-palette-1-dark-3 u-palette-2-base u-btn-1">Login</a>
+        <a href="https://docs.google.com/document/d/1STJtN2_YHQxBVgZgZb6d_r-iElXotDgg2U_gneaCFo8/edit?usp=sharing" class="u-border-none u-btn u-button-style u-hover-palette-1-dark-3 u-palette-2-base u-btn-1">Game Rules</a>
         <h6 class="u-custom-font u-font-ubuntu u-text u-text-default u-text-2">Games built with Computer Vision</h6>
       </div></header>
     <section class="u-clearfix u-valign-middle u-section-1" id="sec-623a">
@@ -168,7 +168,8 @@
             <div class="u-align-left u-container-style u-layout-cell u-palette-1-light-3 u-right-cell u-size-32 u-layout-cell-2">
               <div class="u-container-layout u-valign-top u-container-layout-2">
                 <h2 class="u-text u-text-default u-text-1">Gesture Snake Control</h2>
-                <p class="u-text u-text-2"> A snake Game</p>
+                <p class="u-text u-text-2"> Use your finger to move a "snake" around the screen. As the snake finds food, it eats the food, and thereby grows larger. 
+                  The game ends when the snake either moves off the screen or moves into itself. The goal is to make the snake as large as possible before that happens.</p>
                 <a href="/snakegame" class="u-border-none u-btn u-btn-rectangle u-button-style u-palette-2-base u-btn-1">PLAY</a>
               </div>
             </div>
