--- a/gestureGames/templates/hc.html
+++ b/gestureGames/templates/hc.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Gesture Games​, Gesture Games​">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>trex</title>
+    <title>Hand Cricket</title>
 
       <link rel="stylesheet" href="{% static 'nicepage.css' %}" media="screen">
 <link rel="stylesheet" href="{% static 'trex.css' %}" media="screen">
@@ -53,21 +53,21 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-3-base" href="" style="padding: 10px 20px;">Home</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-3-base" href="" style="padding: 10px 20px;">.</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="">Home</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="">.</a>
 </li></ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <a href="" class="u-border-none u-btn u-button-style u-hover-palette-1-dark-3 u-palette-2-base u-btn-1">Login</a>
+        <a href="https://docs.google.com/document/d/1STJtN2_YHQxBVgZgZb6d_r-iElXotDgg2U_gneaCFo8/edit" class="u-border-none u-btn u-button-style u-hover-palette-1-dark-3 u-palette-2-base u-btn-1">Game Rules</a>
         <h6 class="u-custom-font u-font-ubuntu u-text u-text-default u-text-2">Games built with Computer Vision</h6>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-4641">
