--- a/gestureGames/templates/snakegame.html
+++ b/gestureGames/templates/snakegame.html
@@ -53,7 +53,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-3-base" href="" style="padding: 10px 20px;">Home</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-hover-palette-3-base" href="" style="padding: 10px 20px;">.</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -67,7 +67,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <a href="" class="u-border-none u-btn u-button-style u-hover-palette-1-dark-3 u-palette-2-base u-btn-1">Login</a>
+        <a href="https://docs.google.com/document/d/1STJtN2_YHQxBVgZgZb6d_r-iElXotDgg2U_gneaCFo8/edit" class="u-border-none u-btn u-button-style u-hover-palette-1-dark-3 u-palette-2-base u-btn-1">Game Rules</a>
         <h6 class="u-custom-font u-font-ubuntu u-text u-text-default u-text-2">Games built with Computer Vision</h6>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-4641">
